Fix text cutting off

--- a/app/static/css/content.css
+++ b/app/static/css/content.css
@@ -223,7 +223,6 @@
   display: flex;
   width: 100%;
   height: 70vh;
-  overflow: hidden;
   margin: 0;
   background-color: #FFFFFF;
   justify-content: center;
