--- a/app/static/css/sass/_section.scss
+++ b/app/static/css/sass/_section.scss
@@ -167,7 +167,7 @@ $design-height: 13rem;
       display: flex;
       width: 100%;
       height: 70vh;
-      overflow: hidden;
+      // overflow: hidden;
       margin: 0;
    
       background-color: $white;
